# Form-Respondent-Role

./: .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  OPERATIONS.md  README.md  compose.yml
.github/workflows/: ci.yml  docker-images.yml
migrations/: 001_initial_schema.sql  002_forms.sql  003_form_responses.sql  004_guild_settings.sql  005_jobs.sql  006_indexes.sql  007_response_schema_version.sql  008_form_passing_score.sql  009_form_retries.sql  010_startup_backfill.sql
src/: config.rs  db.rs  error.rs  main.rs  schema.rs
src/models/: condition.rs  form.rs  mod.rs
src/routes/: admin.rs  form_render.rs  health.rs  mod.rs  plugin.rs  respondents.rs
src/services/: auth_gateway.rs  condition_eval.rs  csrf.rs  form_validator.rs  jobs.rs  mod.rs  retry.rs  rl_token.rs  rolelogic.rs  security_headers.rs  session.rs  sync.rs  webhook.rs
src/tasks/: job_listener.rs  job_worker.rs  mod.rs  shutdown.rs  startup_backfill.rs
templates/: admin_list.html  builder.html  done.html  render.html  responses.html  role_config.html  starter_application.json  starter_blank.json  starter_server_quiz.json
